--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+$--color-primary: #eb2f64;
+$--color-primary-light: #ff3366;
+$--color-primary-dark: #ba265d;
+$--color-grey-light-1: #faf9f9;
+$--color-grey-light-2: #f4f2f2;
+$--color-grey-light-3: #f0eeee;
+$--color-grey-light-4: #ccc;
+$--color-grey-dark-1: #333;
+$--color-grey-dark-2: #777;
+$--color-grey-dark-3: #999;
+$--shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+  min-height: 100vh;
+
+}
+body {
+  min-height: 100vh;
+  font-weight: 400;
+  line-height: 1.6;
+  background-image: linear-gradient(to top right, #ff0066 0%, #ff3399 100%);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: $--color-grey-dark-2;
+}
